--- a/StreamerUpdate/StreamerUpdate.csproj
+++ b/StreamerUpdate/StreamerUpdate.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="DirectShowLib.Standard" Version="2.1.0" />
     <PackageReference Include="MahApps.Metro" Version="2.2.0" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.6.0" />
+    <PackageReference Include="NAudio.Wasapi" Version="2.0.0" />
+    <PackageReference Include="NAudio.WinMM" Version="2.0.1" />
     <PackageReference Include="Ninject" Version="3.3.4" />
     <PackageReference Include="OpenCvSharp4" Version="4.5.3.20211207" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.5.3.20211207" />
