--- a/StreamerUpdate/StreamerUpdate.csproj
+++ b/StreamerUpdate/StreamerUpdate.csproj
@@ -1,35 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>WinExe</OutputType>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <UseWPF>true</UseWPF>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <PlatformTarget>AnyCPU</PlatformTarget>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Resources\Lutherrose.png" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Remove="Resources\Lutherrose.png" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="DirectShowLib.Standard" Version="2.1.0" />
-    <PackageReference Include="MahApps.Metro" Version="2.2.0" />
-    <PackageReference Include="MahApps.Metro.IconPacks" Version="4.6.0" />
-    <PackageReference Include="NAudio.Wasapi" Version="2.0.0" />
-    <PackageReference Include="NAudio.WinMM" Version="2.0.1" />
-    <PackageReference Include="Ninject" Version="3.3.4" />
-    <PackageReference Include="OpenCvSharp4" Version="4.5.3.20211207" />
-    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.5.3.20211207" />
-    <PackageReference Include="ReactiveUI.Fody" Version="16.4.15" />
-    <PackageReference Include="ReactiveUI.WPF" Version="16.4.15" />
-    <PackageReference Include="System.Reactive" Version="5.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="DirectShowLib.Standard" Version="2.1.0" />
+        <PackageReference Include="Google.Apis.YouTube.v3" Version="1.57.0.2721" />
+        <PackageReference Include="MahApps.Metro" Version="2.2.0" />
+        <PackageReference Include="MahApps.Metro.IconPacks" Version="4.6.0" />
+        <PackageReference Include="NAudio.Wasapi" Version="2.0.0" />
+        <PackageReference Include="NAudio.WinMM" Version="2.0.1" />
+        <PackageReference Include="Ninject" Version="3.3.4" />
+        <PackageReference Include="OpenCvSharp4" Version="4.5.3.20211207" />
+        <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.5.3.20211207" />
+        <PackageReference Include="ReactiveUI.Fody" Version="16.4.15" />
+        <PackageReference Include="ReactiveUI.WPF" Version="16.4.15" />
+        <PackageReference Include="System.Reactive" Version="5.0.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <SplashScreen Include="Resources\Lutherrose.png" />
-  </ItemGroup>
+    <ItemGroup>
+        <SplashScreen Include="Resources\Lutherrose.png" />
+    </ItemGroup>
 
 </Project>
