Extracted code from ViewModel and put it into a model class.

--- a/StreamerUpdate/StreamerUpdate.csproj
+++ b/StreamerUpdate/StreamerUpdate.csproj
@@ -43,4 +43,10 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Page Update="MVVM\View\MainWindow.xaml">
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
+
 </Project>
