Improved camera capture performance

--- a/StreamerUpdate/StreamerUpdate.csproj
+++ b/StreamerUpdate/StreamerUpdate.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Accord.Video.DirectShow" Version="3.8.0" />
         <PackageReference Include="DirectShowLib.Standard" Version="2.1.0" />
         <PackageReference Include="Google.Apis.YouTube.v3" Version="1.57.0.2721" />
         <PackageReference Include="MahApps.Metro" Version="2.2.0" />
